syntax = "proto3";

package ardapoc.mortgage;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "ardapoc/mortgage/params.proto";
import "ardapoc/mortgage/mortgage.proto";

option go_package = "github.com/ardaglobal/arda-poc/x/mortgage/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/ardaglobal/arda-poc/mortgage/params";
  
  }
  
  // Queries a list of Mortgage items.
  rpc Mortgage    (QueryGetMortgageRequest) returns (QueryGetMortgageResponse) {
    option (google.api.http).get = "/ardaglobal/arda-poc/mortgage/mortgage/{index}";
  
  }
  rpc MortgageAll (QueryAllMortgageRequest) returns (QueryAllMortgageResponse) {
    option (google.api.http).get = "/ardaglobal/arda-poc/mortgage/mortgage";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryGetMortgageRequest {
  string index = 1;
}

message QueryGetMortgageResponse {
  Mortgage mortgage = 1 [(gogoproto.nullable) = false];
}

message QueryAllMortgageRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllMortgageResponse {
  repeated Mortgage                               mortgage   = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

